# ssc

./: cloudbuild.yaml  docker-compose.yaml
diagram/: architecture.dio
manifest/: deployment.yaml  service.yaml
retext/: .gitignore  Cargo.toml  Dockerfile
retext/.devcontainer/: Dockerfile.dev  devcontainer.json  docker-compose.dev.yaml
retext/retext/: Cargo.toml
retext/retext/adapter/: Cargo.toml
retext/retext/adapter/src/: lib.rs
retext/retext/adapter/src/ssc/: mod.rs  request_parser.rs
retext/retext/application/: Cargo.toml
retext/retext/application/src/: lib.rs
retext/retext/domain/: Cargo.toml
retext/retext/domain/src/: lib.rs
retext/retext/domain/src/convert_service/: mod.rs
retext/retext/domain/src/emoji/: emoji_alphabet.rs  emoji_text.rs  mod.rs
retext/retext/domain/src/raw/: mod.rs  raw_alphabet.rs  raw_text.rs
retext/retext/presentation/: Cargo.toml
retext/retext/presentation/src/text/: mod.rs
retext/retext/src/: lib.rs
retext/script/: curl_to_retext.sh
retext/server/: Cargo.toml
retext/server/src/: main.rs  router.rs
tcam/.devcontainer/: Dockerfile.dev  devcontainer.json  docker-compose.dev.yaml
todocket/: pyproject.toml
todocket/.devcontainer/: docker-compose.dev.yaml
