[tool.poetry]
name = "tcam"
version = "0.1.0"
description = "Tickets is created for all members."
authors = ["Kawano Kenichi <bppk28@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
black = "^21.6b0"
pytest-cov = "^2.12.1"
flake8 = "^3.9.2"
isort = "^5.9.1"
tox = "^3.23.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
