[package]
name = "server"
version = "0.1.0"
authors = ["Kawano Kenichi <bppk28@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

env_logger = "0.8.4"
log = "0.4.14"
actix-web = "3.3.2"
failure = "0.1"
serde = "1"
serde_json = "1"

retext = { path = "../retext" }
